# BotLigue

./: .gitignore  Project_Paused.md  README.md  Registration.md  bot.py  setup.cfg
bot/: __init__.py
bot/commands/: admin.py  user.py
bot/commands/admin/: __init__.py  create_tournament.py  destroy_tournament.py  list_tournament.py
bot/commands/user/: __init__.py  register.py
bot/database/: database.py  structure.py
bot/tournaments/: CL_BronzeS4.json
