[metadata]
name = commanderleague_bot
version = 0.1.dev0
author = mcuchet
author_email = martin.cuchet+clbot@gmail.com
url = https://github.com/Spigushe/BotLigue
description="Discord Bot pour gérer la Commander League",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = mtg commander
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Other/Nonlisted Topic

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    discord.py
	python-dotenv
	pychal

[options.entry_points]
console_scripts =
	bot = bot:main
